--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -991,6 +991,11 @@ footer .nom {
   }
 }
 
+#galeria {
+    position: relative !important;
+    z-index: 1;
+}
+
 /* Ajust més compacte per pantalles molt petites */
 @media (max-width: 575.98px) {
   header#inici {
